# rizzler

./: .gitignore  Cargo.toml  README.md  TODO.archive.md  TODO.md  default-style.lisp  default.lisp  dprint.json  grammars.toml  init.rz  lorem_ipsum.txt  lsp.toml
crates/ringbuffer/: Cargo.toml
crates/rizz_actions/: Cargo.toml
crates/rizz_actions/src/: action.rs  lib.rs  lsp.rs
crates/rizz_actions/src/keymap/: default.rs  mod.rs  registry.rs  trie.rs
crates/rizz_changetree/: Cargo.toml
crates/rizz_changetree/src/: lib.rs  nodes.rs
crates/rizz_core/: Cargo.toml
crates/rizz_core/src/: diagnostic.rs  display.rs  lib.rs  mode.rs  position.rs  selection.rs  window_dir.rs
crates/rizz_editor/: Cargo.toml
crates/rizz_editor/examples/: perf.rs
crates/rizz_editor/src/: buffer_list.rs  completion.rs  journal.rs  lib.rs  lisp.rs  search.rs  state.rs
crates/rizz_editor/src/lisp/: helpers.rs  lsp_convert.rs  mod.rs  popup_parse.rs
crates/rizz_editor/src/lisp/builtins/: bufs.rs  fs.rs  grammar.rs  keymap.rs  lifecycle.rs  lsp.rs  minibuffer.rs  misc.rs  mod.rs  motion.rs  popups.rs  queries.rs  registers.rs  search.rs  strings.rs  styling.rs  text.rs  textprops.rs  widgets.rs  windows.rs  wrap.rs
crates/rizz_editor/src/state/: apply.rs  buffers.rs  input.rs  lang.rs  lsp_requests.rs  lsp_responses.rs  lsp_session.rs  mod.rs  render.rs  scripting.rs  surface.rs  tests.rs  workspace.rs
crates/rizz_editor/src/state/apply/: mod.rs  registers.rs  search.rs  text.rs
crates/rizz_highlight/: Cargo.toml
crates/rizz_highlight/src/: lib.rs
crates/rizz_input/: Cargo.toml
crates/rizz_input/src/: count_prefix.rs  lib.rs
crates/rizz_input/src/keymap/: event.rs  mod.rs
crates/rizz_install/: Cargo.toml
crates/rizz_install/src/: lib.rs
crates/rizz_lsp/: Cargo.toml
crates/rizz_lsp/src/: TODO.md  action_bridge.rs  client.rs  codec.rs  document.rs  error.rs  event.rs  lib.rs  message.rs  position.rs  registry.rs  runtime.rs
crates/rizz_lsp_install/: Cargo.toml
crates/rizz_lsp_install/src/: cache.rs  error.rs  install.rs  lib.rs  manifest.rs
crates/rizz_registers/: Cargo.toml
crates/rizz_registers/src/: lib.rs
crates/rizz_ringbuffer/: Cargo.toml
crates/rizz_ringbuffer/src/: lib.rs
crates/rizz_search/: Cargo.toml
crates/rizz_search/src/: lib.rs
crates/rizz_text/: Cargo.toml
crates/rizz_text/src/: io.rs  lib.rs  motions.rs  props.rs  scroll.rs  wrap.rs
crates/rizz_text/src/buffer/: cursor.rs  edits.rs  lsp.rs  marks.rs  mod.rs  text_object.rs  yank.rs
crates/rizz_ts/: Cargo.toml
crates/rizz_ts/src/: error.rs  highlighter.rs  lib.rs  registry.rs
crates/rizz_ts_install/: Cargo.toml
crates/rizz_ts_install/src/: cache.rs  error.rs  install.rs  lib.rs  manifest.rs
crates/rizz_ui/: Cargo.toml
crates/rizz_ui/src/: lib.rs  panel.rs  popup.rs  precompute.rs  render.rs  render_ratatui.rs  styling.rs  terminal.rs  widget.rs  window.rs
crates/rizz_ui/src/components/: editor_view.rs  minibuffer.rs  mod.rs
docs/: ARCHITECTURE.md  LISP_BUILTIN_DOCS.md
src/: action.rs  buffer.rs  buffer_io.rs  buffer_list.rs  command.rs  journal.rs  keymap.rs  lisp.rs  main.rs  mode.rs  motions.rs  popup.rs  position.rs  precompute.rs  props.rs  regions.rs  render.rs  render_ratatui.rs  scroll.rs  selection.rs  slots.rs  state.rs  styling.rs  terminal.rs  widget.rs  window.rs  wrap.rs
src/components/: editor_view.rs  minibuffer.rs  mod.rs  status_line.rs  wrap.rs
src/keymap/: default.rs  event.rs  mod.rs  registry.rs  trie.rs
src/ui/: mod.rs  popup.rs  precompute.rs  props.rs  render.rs  render_ratatui.rs  scroll.rs  styling.rs  terminal.rs  widget.rs
src/ui/components/: editor_view.rs  minibuffer.rs  mod.rs
