[package]
name = "rizzler"
version = "0.1.0"
authors = ["zjom"]
edition = "2024"
license = "Unlicense"
repository = "https://github.com/zjom/rizzler"
description = "the rizz editor — terminal modal editor with embedded lisp."

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.102"
crossbeam-channel = "0.5"
lsp-types = "0.97"
rizz = "0.7.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slotmap = "1.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "process", "sync", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["ansi", "env-filter", "fmt", "smallvec", "std", "tracing-log"] }

[dependencies]
anyhow = { workspace = true }
crossterm = "0.29.0"
rizz_editor = { path = "crates/rizz_editor" }
rizz_ui = { path = "crates/rizz_ui" }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
