[package]
name = "rizz_highlight"
version = "0.1.0"
edition = "2024"
description = "Tree-sitter-backed syntax highlighting for the rizz editor: language detection, parser/query cache, viewport-clipped capture iteration. Supports both natively-linked grammars and runtime-loaded `.wasm` grammars."

[features]
default = ["wasm"]
wasm = ["tree-sitter/wasm"]

[dependencies]
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
thiserror = "2.0.18"
