[package]
name = "rizz_ui"
version = "0.1.0"
edition = "2024"
description = "Renderer-agnostic UI primitives + a ratatui-backed concrete renderer: theme/styling, widget tree, popups, window tree layout, decorator/gutter precompute, editor-view component, terminal guard."

[dependencies]
rizz_core = { path = "../rizz_core" }
rizz_text = { path = "../rizz_text" }
rizz_input = { path = "../rizz_input" }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
unicode-width = "0.2"
rizz = { workspace = true }
im = "15.1.0"
slotmap = { workspace = true }
